tests/interpreter/for-loop-expr-not-iterable.stderr
error: 'Number' is not iterable
 --> $DIR/for-loop-expr-not-iterable.lox:1:11
  |
1 | for ch in 5 {}
  |           ^
