tests/interpreter/for-loop-expr-not-iterable.lox
for ch in 5 {}
